# startracker-device

./: .gitignore  CMakeLists.txt  README.md
deploy/: README.md  bash_profile.kiosk  config.json  install.sh  intrinsics.json  set_boot_mode.sh  startracker-autostart-track  startracker-ui.service  startracker.service  uninstall.sh  weston.ini
deploy/star_maps/: lidar_reference_108stars.csv  star_map_1.351m_20260526_135419.csv  star_map_1.351m_20260526_135419_anchors.json
shared/: ipc.h
src/: bench_detect.cpp  capture_frames.cpp  debug_detect.cpp  main.cpp
src/common/: Types.hpp
src/detector/: Config.hpp  StarDetector.cpp  StarDetector.hpp  StarDetectorLight.cpp  StarDetectorLight.hpp
src/geometry/: Calibration.hpp  Frames.hpp  Transform.hpp
src/imu/: ImuReader.cpp  ImuReader.hpp
src/imu/eskf/: ESKF.cpp  ESKF.hpp
src/io/: CameraReader.cpp  CameraReader.hpp
src/ipc/: FreeD.cpp  FreeD.hpp  SharedMemoryServer.cpp  SharedMemoryServer.hpp  SocketServer.cpp  SocketServer.hpp  test_shm.cpp  test_socket.cpp
src/localiser/: Localiser.cpp  Localiser.hpp  Localiser3D.cpp  Localiser3D.hpp  StarIndex.cpp  StarIndex.hpp  StarIndex3D.cpp  StarIndex3D.hpp
src/mapper/: MapBuilder.cpp  MapBuilder.hpp
src/pipeline/: FrameSlot.hpp
src/pose/: PoseEstimator.cpp  PoseEstimator.hpp
src/tracker/: Tracker.cpp  Tracker.hpp  Tracker3D.cpp  Tracker3D.hpp
src/util/: ConfigLoader.cpp  ConfigLoader.hpp  Intrinsics.cpp  Intrinsics.hpp  LinAlg.hpp  OneEuroFilter.hpp
src/workers/: CameraWorker.cpp  CameraWorker.hpp  IMUWorker.cpp  IMUWorker.hpp  SharedState.cpp  SharedState.hpp  TrackingWorker.cpp  TrackingWorker.hpp  worker_util.hpp
ui/: BackendModel.cpp  BackendModel.h  CMakeLists.txt  FrameProvider.cpp  FrameProvider.h  SharedMemoryReader.cpp  SharedMemoryReader.h  SocketClient.cpp  SocketClient.h  main.cpp
ui/qml/: CalibrateScreen.qml  DetectScreen.qml  DetectorDebugScreen.qml  SettingsScreen.qml  TrackScreen.qml  main.qml  qmldir
